--- a/design-system/website/package.json
+++ b/design-system/website/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-ui/website",
-  "version": "2.0.1",
+  "name": "@k6ui/website",
+  "version": "0.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -8,18 +8,18 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@keystone-ui/button": "^4.0.0",
-    "@keystone-ui/core": "^2.0.2",
-    "@keystone-ui/fields": "^3.0.0",
-    "@keystone-ui/loading": "^3.0.0",
-    "@keystone-ui/modals": "^3.0.0",
-    "@keystone-ui/notice": "^3.0.0",
-    "@keystone-ui/options": "^3.0.0",
-    "@keystone-ui/pill": "^3.0.0",
-    "@keystone-ui/popover": "^3.0.0",
-    "@keystone-ui/segmented-control": "^3.0.0",
-    "@keystone-ui/toast": "^3.0.0",
-    "@keystone-ui/tooltip": "^3.0.0",
+    "@k6ui/button": "^0.0.0",
+    "@k6ui/core": "^0.0.0",
+    "@k6ui/fields": "^0.0.0",
+    "@k6ui/loading": "^0.0.0",
+    "@k6ui/modals": "^0.0.0",
+    "@k6ui/notice": "^0.0.0",
+    "@k6ui/options": "^0.0.0",
+    "@k6ui/pill": "^0.0.0",
+    "@k6ui/popover": "^0.0.0",
+    "@k6ui/segmented-control": "^0.0.0",
+    "@k6ui/toast": "^0.0.0",
+    "@k6ui/tooltip": "^0.0.0",
     "@preconstruct/next": "^3.0.0",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
