--- a/design-system/packages/button/package.json
+++ b/design-system/packages/button/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-ui/button",
-  "version": "4.0.0",
+  "name": "@k6ui/button",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "dist/button.cjs.js",
   "module": "dist/button.esm.js",
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@keystone-ui/core": "^2.0.1",
-    "@keystone-ui/icons": "^3.0.0",
-    "@keystone-ui/loading": "^3.0.0",
+    "@k6ui/core": "^0.0.0",
+    "@k6ui/icons": "^0.0.0",
+    "@k6ui/loading": "^0.0.0",
     "react": "^17.0.2"
   },
   "engines": {
