--- a/design-system/packages/core/package.json
+++ b/design-system/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-ui/core",
-  "version": "2.0.2",
+  "name": "@k6ui/core",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "dist/core.cjs.js",
   "module": "dist/core.esm.js",
