--- a/design-system/packages/fields/package.json
+++ b/design-system/packages/fields/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-ui/fields",
-  "version": "3.0.0",
+  "name": "@k6ui/fields",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "dist/fields.cjs.js",
   "module": "dist/fields.esm.js",
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@keystone-ui/core": "^2.0.2",
-    "@keystone-ui/icons": "^3.0.0",
-    "@keystone-ui/popover": "^3.0.0",
+    "@k6ui/core": "^0.0.0",
+    "@k6ui/icons": "^0.0.0",
+    "@k6ui/popover": "^0.0.0",
     "@types/react-select": "^4.0.15",
     "date-fns": "^2.21.1",
     "react": "^17.0.2",
