--- a/design-system/packages/modals/package.json
+++ b/design-system/packages/modals/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-ui/modals",
-  "version": "3.0.0",
+  "name": "@k6ui/modals",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "dist/modals.cjs.js",
   "module": "dist/modals.esm.js",
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@keystone-ui/button": "^4.0.0",
-    "@keystone-ui/core": "^2.0.1",
+    "@k6ui/button": "^0.0.0",
+    "@k6ui/core": "^0.0.0",
     "react": "^17.0.2",
     "react-focus-lock": "^2.5.0",
     "react-remove-scroll": "^2.4.1",
