--- a/design-system/packages/options/package.json
+++ b/design-system/packages/options/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-ui/options",
-  "version": "3.0.0",
+  "name": "@k6ui/options",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "dist/options.cjs.js",
   "module": "dist/options.esm.js",
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@keystone-ui/core": "^2.0.2",
-    "@keystone-ui/fields": "^3.0.0",
-    "@keystone-ui/icons": "^3.0.0",
+    "@k6ui/core": "^0.0.0",
+    "@k6ui/fields": "^0.0.0",
+    "@k6ui/icons": "^0.0.0",
     "@types/react-select": "^4.0.15",
     "react-select": "^4.3.0"
   },
