--- a/design-system/packages/pill/package.json
+++ b/design-system/packages/pill/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-ui/pill",
-  "version": "3.0.0",
+  "name": "@k6ui/pill",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "dist/pill.cjs.js",
   "module": "dist/pill.esm.js",
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@keystone-ui/core": "^2.0.1",
-    "@keystone-ui/icons": "^3.0.0"
+    "@k6ui/core": "^0.0.0",
+    "@k6ui/icons": "^0.0.0"
   },
   "engines": {
     "node": ">=v12.13.1"
