--- a/design-system/packages/popover/package.json
+++ b/design-system/packages/popover/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-ui/popover",
-  "version": "3.0.0",
+  "name": "@k6ui/popover",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "dist/popover.cjs.js",
   "module": "dist/popover.esm.js",
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@keystone-ui/core": "^2.0.1",
+    "@k6ui/core": "^0.0.0",
     "@popperjs/core": "^2.9.2",
     "react-popper": "^2.2.5"
   },
