--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.14.0",
     "@graphql-tools/merge": "^6.2.13",
-    "@keystone-next/admin-ui": "^14.1.1",
+    "@k6js-next/admin-ui": "^0.0.0",
     "@keystone-next/auth": "^23.0.0",
     "@keystone-next/document-renderer": "^2.0.3",
     "@keystone-next/fields": "^8.1.0",
