--- a/packages-next/admin-ui/package.json
+++ b/packages-next/admin-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keystone-next/admin-ui",
-  "version": "14.1.1",
+  "name": "@k6js-next/admin-ui",
+  "version": "0.0.0",
   "license": "MIT",
   "dependencies": {
     "@apollo/client": "^3.3.16",
