--- a/packages-next/admin-ui/package.json
+++ b/packages-next/admin-ui/package.json
@@ -7,6 +7,7 @@
     "@babel/runtime": "^7.14.0",
     "@emotion/hash": "^0.8.0",
     "@emotion/weak-memoize": "^0.2.5",
+    "@keystone-next/admin-ui": "^14.1.1",
     "@keystone-next/admin-ui-utils": "^4.0.0",
     "@keystone-next/keystone": "^17.1.0",
     "@keystone-next/types": "^17.0.1",
@@ -48,6 +49,7 @@
       "components/index.ts",
       "system/index.ts",
       "templates/index.ts",
+      "pages/index.ts",
       "pages/*/index.tsx",
       "apollo.tsx",
       "context.tsx",
