--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "contributing-guide": "is-ci && exit 0 || chalk -t \"{bold 📝 Contributing to KeystoneJS?}\" && terminal-link \"🔗 Read the full Contributing Guide\" \"https://github.com/keystonejs/keystone/blob/master/CONTRIBUTING.md\"",
     "npm-tag": "manypkg npm-tag",
     "update": "manypkg upgrade",
-    "no-cypress-install": "cross-env CYPRESS_INSTALL_BINARY=0 yarn"
+    "no-cypress-install": "cross-env CYPRESS_INSTALL_BINARY=0 yarn",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@babel/core": "^7.14.0",
@@ -63,6 +64,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "is-ci": "^3.0.0",
     "jest": "^26.6.3",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.2.1",
     "remark-cli": "^6.0.1",
     "remark-frontmatter": "^1.3.3",
